# Blog-Generator

./: blog_generator.py  pyproject.toml
